test/errors/continue_outside_loop.correct
error: continue_outside_loop.li:1:1: 'continue' used outside of a loop
│ continue;
│ ~~~~~~~~
│ ^
